@@ -3,9 +3,9 @@ DIST sharutils-4.10.tar.bz2 920944 RMD160 2ec3138af63aa7b62288f4b8768bf72b885d3e
 DIST sharutils-4.11.tar.bz2 956779 RMD160 b02b10daaca5f493f2318b8e6aaea78cf0c11704 SHA1 c4957ac86243bb0046f1f6d6594befc2f9d03bdd SHA256 3ee2e683000fedf70d6912d4939617a290b5ecc4a45d249b9cd54d8bc1c6c667
 DIST sharutils-4.7.tar.bz2 640932 RMD160 6ef271d21ea41003ff13d6aef241c6a4fd4dc296 SHA1 0b8c1d54fdcf97a93aba079d342d1873a8fc423b SHA256 2f29604c9bc4471fb35975c10074bb3585dea66ebc52b5560989a370f2e3f00e
 DIST sharutils-4.9.tar.bz2 925433 RMD160 3875eaa4e1f7e7a6f3f8aac2365674fc94650390 SHA1 c73d1d0108c3c8c63c49e673e3521a428e5382f9 SHA256 d561bf4abdd635d94361b58bc26128b339579e4fe6d877c772715a133be9b666
-EBUILD sharutils-4.10.ebuild 892 RMD160 87582e6f6db395fc4aaa98cff661e060630d52fb SHA1 8a81a54503d4670233975b9178184145f711e48b SHA256 cbf6ab56c541cc3b651911b7bd687c716a9346a5fb0bd90c3299d24502f040cc
+EBUILD sharutils-4.10.ebuild 898 RMD160 da1b28ebd88ddb8f79c0d516df345c702601a5f3 SHA1 47616021523bffb30e1452a6e1163508bfd57491 SHA256 48214776ab69fe46add2158fb723d4ca6e2cdf6c0947c4db8fd54188655cd949
 EBUILD sharutils-4.11.ebuild 892 RMD160 79cba6c455a19a0b3be2864b9354a884754ffa8b SHA1 5caf6e1835e39e5f9ba2a14878638e906f6006ca SHA256 925d86bffd7c071f51ee919ac28841111edec8bc615d704796b304a01ffd3d41
 EBUILD sharutils-4.7.ebuild 986 RMD160 53eb0c001060ded39e4dd184ce535c5dbeae3c72 SHA1 ba4736421b5e144f50f14855622320f5741fa3ab SHA256 9880ed3ae880434f7408f66fa4fb31298ce57ff63e56294b2c2e942a8be3689f
 EBUILD sharutils-4.9.ebuild 894 RMD160 6f4fee6a438b48c9bbc623bfda145b792108ab99 SHA1 e4e2e8042fc9e0940a8c8898238b700f49089d74 SHA256 de50fc3ff2daa2aec406c78384cc3f8d76b38aefe5ce03571c01d2d21ae7dde7
-MISC ChangeLog 11031 RMD160 93e255dbfc5de28af140a548660799537cf370e2 SHA1 6c70f1fd1db0925061fde5665913dc164f4db040 SHA256 9ff6375e59bc3fb7f38a392a1847cf2f93f8e8cc53d2c47776aaac03f14cbda0
+MISC ChangeLog 11148 RMD160 58e04348e10c8188b640cc5098ec3bb02a950be7 SHA1 3464e246733a12f98bfef45e46791261dab07522 SHA256 c605651073ceb9d3f3cde5eca4888b0e0515ada1c18cbcad7cc29fd701701480
 MISC metadata.xml 230 RMD160 0bdd1ad0560066728a6b6b05ecf18885f92e9de9 SHA1 897826322e03e748ffc8073cc450023358e1359e SHA256 a09c99518c645f34b2c1d9adc661671460c146819513b0f847a71c240b3606f0
