@@ -1,6 +1,10 @@
 # ChangeLog for app-arch/sharutils
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/sharutils/ChangeLog,v 1.68 2011/02/06 16:55:15 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/sharutils/ChangeLog,v 1.69 2011/02/09 08:27:27 phajdan.jr Exp $
+
+  09 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  sharutils-4.10.ebuild:
+  x86 stable wrt bug #353870
 
 *sharutils-4.11 (06 Feb 2011)
 
